wp-content/themes/sydneytheme/style.css
/* ... */
  @media (min-width: 70em) {
    .header {
      font-size: 1em; } }
  .header__wrapper {
    display: flex;
    max-width: 1552px;
    margin: 0 auto;
    padding: 20px;
    background: white; }

.logo {
  color: #EB0029;
  max-width: 51px; }
  @media (min-width: 70em) {
    .logo {
      max-width: 75px; } }

.nav {
  display: none;
  visibility: hidden;
  background: #F7F7F7;
  width: 100%; }
  @media (min-width: 48em) {
    .nav {
      visibility: visible;
      display: flex;
      padding-bottom: 0;
      align-items: center;
      background: none; } }
  .nav__list {
    padding: 28px 10px 10px; }
    @media (min-width: 48em) {
      .nav__list {
        display: flex;
        margin: 0 5px;
        padding: 10px; } }
    @media (min-width: 70em) {
      .nav__list {
        margin: 0 30px; } }
  .nav__item {
    list-style-type: none;
    margin: 10px;
    position: relative;
    white-space: nowrap; }
    @media (min-width: 70em) {
      .nav__item {
        margin: 15px; } }
    @media (min-width: 48em) {
      .nav__item:hover::after, .nav__item:focus::after, .nav__item:active::after {
        content: "";
        position: absolute;
        height: 5px;
        border-bottom: 2px solid #EB0029;
        width: 100%;
        top: 16px;
        left: 0; } }
  @media (min-width: 48em) {
    .nav .current-menu-item::after {
      content: "";
      position: absolute;
      height: 5px;
      border-bottom: 2px solid #EB0029;
      width: 100%;
      top: 16px;
      left: 0; } }
  .nav a {
    color: #424445;
    text-decoration: none;
    text-transform: uppercase; }

.social {
  padding: 0 20px; }
  @media (min-width: 48em) {
    .social {
      padding: 0;
      display: flex;
      width: 100%; } }
  .social .line {
    background: #EB0029;
    width: 100%;
    height: 2px;
    margin: 12px 0 20px; }
    @media (min-width: 48em) {
      .social .line {
        margin: 12px 0 0; } }
    @media (min-width: 70em) {
      .social .line {
        margin-top: 30px; } }
  .social .nav__link {
    padding: 10px; }
    @media (min-width: 48em) {
      .social .nav__link {
        padding: 6px; } }
    @media (min-width: 70em) {
      .social .nav__link {
        padding: 20px; } }
    .social .nav__link:last-child {
      padding-right: 0; }
  .social .nav__icon {
    width: 20px;
    height: 20px;
    fill: #EB0029;
    transition: fill 0.7s ease; }
    @media (min-width: 48em) {
      .social .nav__icon {
        width: 16px;
        height: 16px; } }
    @media (min-width: 70em) {
      .social .nav__icon {
        width: 25px;
        height: 25px; } }
    .social .nav__icon:hover, .social .nav__icon:focus, .social .nav__icon:active {
      fill: #9f001c; }

/* styles only for mobile and tablet when menu is a hamburger */
.nav__hamburger-icon {
  display: inline-block;
  cursor: pointer;
  z-index: 100;
  position: absolute;
  top: 30px;
  right: 20px; }
  .nav__hamburger-icon .hamburger-bar1,
  .nav__hamburger-icon .hamburger-bar2,
  .nav__hamburger-icon .hamburger-bar3 {
    width: 30px;
    height: 5px;
    background-color: #EB0029;
    margin: 6px 0;
    transition: 0.4s; }
  @media (min-width: 48em) {
    .nav__hamburger-icon {
      display: none;
      visibility: hidden; } }

/* style the hamburger menu icon to transition into a cross when clicked */
.nav__open .hamburger-bar1 {
  transform: rotate(-45deg) translate(-9px, 6px); }

.nav__open .hamburger-bar2 {
  opacity: 0; }

.nav__open .hamburger-bar3 {
  transform: rotate(45deg) translate(-9px, -7px); }

/* inside the hamburger menu once opened */
.nav__open + .nav {
  display: block;
  visibility: visible;
  background: #F7F7F7;
  position: absolute;
  top: 0;
  left: 0;
  animation-name: slidein;
  animation-duration: 0.3s;
  width: 100%;
  height: 100%;
  z-index: 99;
  opacity: 1; }

@keyframes slidein {
  from {
    left: -100%; } }

.slider {
  max-width: 100%;
  position: relative;
  overflow: hidden;
  display: flex; }
  @media (min-width: 48em) {
    .slider {
      height: 670px; } }
  @media (min-width: 87em) {
    .slider {
      height: 870px; } }
  .slider__slide-wrapper {
    position: relative;
    left: 0;
    width: 100%;
    min-width: 100vw;
    transition: all 0.75s ease; }
    @media (min-width: 48em) {
      .slider__slide-wrapper {
        position: absolute; } }
    .slider__slide-wrapper:first-child {
      z-index: 3; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:first-child {
          left: 0; } }
      .slider__slide-wrapper:first-child .slider__image {
        animation: fadein 1s;
        animation-iteration-count: 1;
        animation-timing-function: ease-in-out; }

@keyframes fadein {
  0% {
    opacity: 0.7; }
  100% {
    opacity: 1; } }
        @media (min-width: 48em) {
          .slider__slide-wrapper:first-child .slider__image {
            animation: none; } }
    .slider__slide-wrapper:nth-child(2) {
      z-index: 2; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:nth-child(2) {
          left: -100vw; } }
    .slider__slide-wrapper:last-child {
      z-index: 1; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:last-child {
          left: 0; } }
    .slider__slide-wrapper.previous:first-child {
      z-index: 3; }
    .slider__slide-wrapper.previous:nth-child(2) {
      z-index: 3; }
    .slider__slide-wrapper.previous:last-child {
      z-index: 2; }
    @media (min-width: 48em) {
      .slider__slide-wrapper.next:first-child .slider__content-box {
        animation: slideright 2.5s;
        animation-iteration-count: 1;
        animation-duration: 1.5s;
        animation-timing-function: ease; }
      @keyframes slideright {
        0% {
          right: 530px;
          opacity: 0; }
        100% {
          right: 130px;
          opacity: 1; } } }
/* ... */

